--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,5 @@
 steps:
-- name: 'gcr.io/cloud-builders/gcloud'
-  args: ['app', 'deploy']
-  dir: 'portfolio'
+ - name: maven:3-jdk-8
+   entrypoint: mvn
+   args: ["package","appengine:deploy"]
+   dir: 'portfolio'
