--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -17,6 +17,11 @@
   </properties>
 
   <dependencies>
+  <dependency>
+    <groupId>com.google.cloud</groupId>
+    <artifactId>google-cloud-translate</artifactId>
+    <version>1.70.0</version>
+  </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
